# VaultGuard

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/ml/: explainer.py  feature_engineering.py  train.py
app/models/: schemas.py  transaction.py
app/routes/: predictions.py  transactions.py  websocket.py
app/services/: __init__.py  feature_cache.py  fraud_service.py  transaction_service.py
data/: generate_transactions.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js
frontend/src/components/: FraudDashboard.js  LiveFeed.js  TransactionDetail.js  TransactionTable.js
models/: feature_columns.json
tests/: conftest.py  test_api.py  test_feature_engineering.py  test_fraud_service.py
